--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="error_message">Sorry, there was an error.  Please restart the app to try again.</string>
     <string name="popularity">Popularity</string>
     <string name="rating">Rating</string>
+    <string name="title_movie_detail">Movie Details</string>
 </resources>
