--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="popularity">Popularity</string>
     <string name="rating">Rating</string>
     <string name="title_movie_detail">Movie Details</string>
+    <string name="movie_poster">Movie Poster</string>
+    <string name="release_date">Release date:</string>
+    <string name="user_rating">User rating:</string>
 </resources>
