--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="favorite_movie">Favorite Movie</string>
     <string name="movie_poster">Movie Poster</string>
     <string name="trailers">Trailers :</string>
+    <string name="favorites">Favorites</string>
+    <string name="no_favorites">No Favorites</string>
+    <string name="reviews">Reviews</string>
 
 </resources>
