movies load in background instead of using asynctask

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="added_to_favorites">Added to favorites!</string>
     <string name="play_trailer_button">Play trailer button</string>
 
+
+    <string name="sort_by_popular">popular</string>
+    <string name="sort_by_rating">top_rated</string>
+
 </resources>
